JSW Devsb/src/objects/PIB_Volume_NSR_Actuals__c.object
<CustomObject>
    <fields>
        <fullName>Cust_Grup_1__c</fullName>
        <label>Cust Grup 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Code__c</fullName>
        <formula>Customer__r.Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>PIB_Bolume_NSR_Actuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>CASE( MONTH( Date__c ) , 
1, &quot;January&quot;, 
2, &quot;February&quot;,
3,&quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;, 
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
&quot;December&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSR_Value__c</fullName>
        <label>NSR Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PIB_SO_Targets__c</fullName>
        <label>PIB SO Targets</label>
        <referenceTo>PIB_SO_Targets__c</referenceTo>
        <relationshipName>PIB_Bolume_NSR_Actuals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTY__c</fullName>
        <label>QTY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Territory_Code__c</fullName>
        <label>Territory Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X15_Days_Checkbox__c</fullName>
        <formula>IF( DAY( Date__c ) &lt; 16, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>15 Days Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>TEXT( YEAR( Date__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>PIB Volume &amp; NSR Actuals</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PIBACTL-{00000000}</displayFormat>
        <label>PIB Volume &amp; NSR Actuals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PIB Volume &amp; NSR Actuals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>